# felo_extinction

./: .gitignore  AGENTS.md  README.md  setup.cfg
felo_extinction/data/: __init__.py
felo_extinction/data/templates/: __init__.py
felo_extinction/data_handling/: __init__.py
felo_extinction/fitting/: __init__.py  asls.py
felo_extinction/models/: extinction_models.py
felo_extinction/mw_extinction/: mw_extinction.py
