[metadata]
name = felo_extinction
version = 0.1.0
author = Yuming Fu
author_email = fuympku@outlook.com
description = A package to fit the extinction curve and 2175 Å bump of FeLoBAL quasars
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rudolffu/felo_extinction
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    numpy
    pandas
    matplotlib
    astropy
    scipy
    lmfit

[options.package_data]
felo_extinction = data/templates/*.dat

[options.packages.find]
exclude =
    tests
